--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -58,7 +58,7 @@
                     <a class="nav-link" href="#"><b>Delivery Agent Login</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Admin</b></a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/"><b>Admin</b></a>
                 </li>
             </ul>
            
@@ -86,14 +86,14 @@
       
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <label class="form-label" for="form3Example3">Email address</label>
+                  <label class="form-label" for="form3Example3"> <i class="fa fa-envelope" style="font-size:15px;color:blue"></i> Email address</label>
                   <input type="email" id="email" name="email" class="form-control form-control-lg"
                     placeholder="Enter Email Address" />
                 </div>
       
                 <!-- Password input -->
                 <div class="form-outline mb-3">
-                  <label class="form-label" for="form3Example4">Password</label>
+                  <label class="form-label" for="form3Example4"><i class="fa fa-key icon" style="font-size:15px;color:blue"></i> Password</label>
                   <input type="password" name="password" id="password" class="form-control form-control-lg"
                     placeholder="Enter Password" />
                 </div>
@@ -132,7 +132,7 @@
    
 
 
-        <div style="margin-top:10px;" class="container-fluid bcontent">
+        <div style="margin-top:20px;" class="container-fluid bcontent">
           <footer style="background-color:whitesmoke" class="container-fluid bcontent" , align="center">
               <a href="#"><i class="fa fa-facebook-official"></i></a>
               <a href="#"><i class="fa fa-pinterest-p"></i></a>
