--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#"><b>Delivery Agent Login</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="admin"><b>Admin</b></a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/"><b>Admin</b></a>
                 </li>
             </ul>
            
