--- a/user/templates/addbooks.html
+++ b/user/templates/addbooks.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="userindex"><b>Home</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Add Books</b></a>
+                    <a class="nav-link" href="addbooks"><b>Add Books</b></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><b></b></a>
@@ -69,7 +69,7 @@
     </div>
   
     <div class="container-fluid bcontent" align="center">
-        <form action="addbooks" method = "POST"> 
+        <form action="addbooks" method = "POST" enctype="multipart/form-data"> 
           {% csrf_token %}
             <div class="form-row" >
               <div class="form-group col-md-4">
